fixed contact form not working on safari

--- a/src/styles/Contact.scss
+++ b/src/styles/Contact.scss
@@ -2,6 +2,7 @@
 
 .container {
   font-size: 1.15rem;
+  user-select: auto;
 
   label {
     text-transform: uppercase;
